--- a/src/app.html
+++ b/src/app.html
@@ -12,7 +12,7 @@
 		<meta name="viewport" content="width=device-width" />
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover" class="min-h-screen text-neutral-800">
+	<body data-sveltekit-preload-data="hover" class="min-h-screen text-neutral-700 font-medium">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
